# chessz

./: CMakeLists.bat  CMakeLists.txt  README.md  resources.qrc  setup7-64.iss  translations.qrc
data/templates/: html-default.template  notation-default.template
src/: CMakeLists.txt
src/common/: build.h  build_chessx.h  build_inc.h  chessx_mod.cpp  chessx_mod.hpp  logstream.cpp  qt6compat.h
src/database/: analysis.cpp  analysis.h  annotation.cpp  arenabook.cpp  bitboard.cpp  board.cpp  clipboarddatabase.cpp  ctgbookwriter.cpp  ctgdatabase.cpp  database.cpp  databaseconversion.cpp  databaseinfo.cpp  datesearch.cpp  downloadmanager.cpp  duplicatesearch.cpp  ecoinfo.cpp  ecopositions.cpp  editaction.cpp  elosearch.cpp  enginedata.cpp  enginelist.cpp  enginelist.h  engineoptiondata.cpp  engineparameter.h  enginex.cpp  eventinfo.cpp  ficsclient.cpp  ficsdatabase.cpp  filter.cpp  filtermodel.cpp  filtersearch.cpp  gamecursor.cpp  gamecursor.h  gamex.cpp  historylist.cpp  index.cpp  indexitem.cpp  memorydatabase.cpp  movedata.cpp  movedata.h  (+33 more)
src/database/scid/: sciddatabase.cpp
src/dialogs/: aboutdlg.cpp  actiondialog.cpp  boardsearchdialog.cpp  commentdialog.cpp  copydialog.cpp  dlgsavebook.cpp  matchparameterdlg.cpp  preferences.cpp  promotiondialog.cpp  quicksearch.cpp  recipientaddressdialog.cpp  renametagdialog.cpp  savedialog.cpp  tagdialog.cpp
src/guess/: guess.cpp  guess_compileeco.cpp  guess_guessengine.cpp  guess_misc.cpp  guess_movelist.cpp  guess_movelist.h  guess_position.cpp  guess_recog.cpp
src/gui/: analysiswidget.cpp  analysiswidget.ui  boardsetup.cpp  boardsetuptoolbutton.cpp  boardtheme.cpp  boardview.cpp  boardviewex.cpp  boardviewex.h  chartwidget.cpp  chessbrowser.cpp  chessbrowser.h  chessxsettings.cpp  colorlist.cpp  databaselist.cpp  databaselistmodel.cpp  databaselistmodel.h  digitalclock.cpp  dockwidgetex.cpp  ecolistwidget.cpp  engineoptiondialog.cpp  engineoptionlist.cpp  engineoptionmodel.cpp  eventlistwidget.cpp  eventlistwidget.h  exclusiveactiongroup.cpp  exttool.cpp  ficsconsole.cpp  gamelist.cpp  gamelistsortmodel.cpp  gamenotationwidget.cpp  gamenotationwidget.h  gamewindow.cpp  helpbrowser.cpp  helpbrowsershell.cpp  historylabel.cpp  kbaction.cpp  listwidgetex.cpp  loadquery.cpp  main.cpp  mainwindow.cpp  (+17 more)
src/gui/ooo/: converter.cpp  document.cpp  formatproperty.cpp  kzip.cpp  styleinformation.cpp  styleparser.cpp
src/quazip/: CMakeLists.txt  JlCompress.cpp  qioapi.cpp  quaadler32.cpp  quacrc32.cpp  quagzipfile.cpp  quagzipfile.h  quaziodevice.cpp  quaziodevice.h  quazip.cpp  quazipdir.cpp  quazipfile.cpp  quazipnewinfo.cpp  unzip.cpp  unzip.h  zip.cpp  zip.h
src/vld/src/: vld.cpp
tests/unittests/: positionsearchtest.cpp  positionsearchtest.h
tools/: chessx.eco.txt  chessx.small_eco.txt
zz_extras/: neoSet.kra
zz_extras/new themes/: Neo.kra
